	?NS_COMPONENT_ACCEPT], ...].

	* include/exmpp.hrl: Add Jabber Component Protocol namespaces macros.

	* src/core/exmpp_stanza.erl (to_list/2, to_list/3): Add a note about
	equivalent namespaces in exmpp_xml:xmlel_to_xmlelemen/3. Add Server
	Dialback to default prefixed namespace.
	(to_list/1): Add a function which calls to_list/2 with common XMPP
	default namespaces.

2008-07-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xml.erl: Add functions to remove text nodes
	containing only whitespaces (indentation usually). Add function to
	indent an XML tree (for debugging purpose mostly). Add support to load
	automatically known namespaces/names/attributes lists from exmpp
	application environment; this is disabled by default and can be
	enabled with the 'autoload_known' flag. Add function filter/3, fold/3,
	foreach/2 and map/2 which are equivalent to their counterpart in
	'lists'.

	* testsuite/etest.in: Don't forgot to add $top_builddir/ebin to the
	code path or the testsuite will check the installed exmpp.

	* testsuite/eunit_tty.erl: Use the new indent facility of exmpp_xml
	with the JUnit XML report.

	* TODO, doc/overview.edoc: Update TODO.

	* src/Makefile.am: exmpp_callbacks was removed.

2008-07-07  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_internals.erl (gen_controlling_process): Fix API: the
	second argument (Pid) was missing!

	* src/core/exmpp_stream.erl, src/core/exmpp_compress.erl: Style.

	* src/core/exmpp_xml.erl: Accept atoms and integers as attribute
	value. They're converted to binary internally and it's not possible to
	get them back in their original type.

	* src/core/exmpp_presence.erl: Use exmpp_xml:get_cdata_as_list/1
	instead of binary_to_list/1.

	* src/core/exmpp_xmlstream.erl: A function was left behind: it now
	uses exceptions too.

	* ebin/exmpp.app.in, doc/Makefile.am: exmpp_callbacks was removed.

	* Makefile.am, testsuite/Makefile.am, testsuite/etest.in,